reset password completed

--- a/views/template.hbs
+++ b/views/template.hbs
@@ -110,7 +110,7 @@
     
     {{#if_equal task 'Email Recovery'}}
     <div class="wrapper col-6">
-    <h5 class="intro">  API </h5>
+    <h5 class="intro"> GoGoGaming </h5>
     <div class="contents">
         <h5 class="headings"> {{ heading }} </h5>
         <h6 class="greeting">  {{ greeting }} </h6>
